--- a/spa.html
+++ b/spa.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
+<!--
+  spa.html
+  spa browser document
+-->
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>SPA Starter</title>
-    <!--stylesheets-->
-    <link rel="stylesheet" href="css/spa.css" type="text/css">
-    <link rel="stylesheet" href="css/spa.shell.css" type="text/css">
-    <!--third-party javascript-->
-    <script src="js/jq/jquery_1.9.1.js"></script>
-    <script src="js/jq/jquery.uriAnchor-1.1.3.js"></script>
-    <!--our javascript-->
-    <script src="js/spa.js"></script>
-    <script src="js/spa.shell.js"></script>
-    <script>
-      $(function () {
-        spa.initModule($("#spa"));
-      })
-    </script>
+  <meta charset="UTF-8">
+  <title>SPA Starter</title>
+  <!--stylesheets-->
+  <link rel="stylesheet" href="css/spa.css" type="text/css">
+  <link rel="stylesheet" href="css/spa.chat.css" type="text/css">
+  <link rel="stylesheet" href="css/spa.shell.css" type="text/css">
+  <!--third-party javascript-->
+  <script src="js/jq/jquery_1.9.1.js"></script>
+  <script src="js/jq/jquery.uriAnchor-1.1.3.js"></script>
+  <!--our javascript-->
+  <script src="js/spa.js"></script>
+  <script src="js/spa.util.js"></script>
+  <script src="js/spa.model.js"></script>
+  <script src="js/spa.shell.js"></script>
+  <script src="js/spa.chat.js"></script>
+  <script>
+    $(function () {
+      spa.initModule($("#spa"));
+    })
+  </script>
 </head>
 <body>
-    <div id="spa"></div>
+<div id="spa"></div>
 </body>
 </html>
