--- a/spa.html
+++ b/spa.html
@@ -7,19 +7,28 @@
 <head>
   <meta charset="UTF-8">
   <title>SPA Starter</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <!--stylesheets-->
   <link rel="stylesheet" href="css/spa.css" type="text/css">
   <link rel="stylesheet" href="css/spa.chat.css" type="text/css">
   <link rel="stylesheet" href="css/spa.shell.css" type="text/css">
+  <link rel="stylesheet" href="css/spa.avtr.css" type="text/css">
   <!--third-party javascript-->
+  <script src="js/lib/taffy.js"></script>
   <script src="js/jq/jquery_1.9.1.js"></script>
   <script src="js/jq/jquery.uriAnchor-1.1.3.js"></script>
+  <script src="js/jq/jquery.event.gevent.js"></script>
+  <script src="js/jq/jquery.event.ue.js"></script>
   <!--our javascript-->
   <script src="js/spa.js"></script>
   <script src="js/spa.util.js"></script>
+  <script src="js/spa.data.js"></script>
+  <script src="js/spa.fake.js"></script>
+  <script src="js/spa.model.js"></script>
   <script src="js/spa.model.js"></script>
   <script src="js/spa.shell.js"></script>
   <script src="js/spa.chat.js"></script>
+  <script src="js/spa.avtr.js"></script>
   <script>
     $(function () {
       spa.initModule($("#spa"));
