--- a/spa.html
+++ b/spa.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="css/spa.avtr.css" type="text/css">
   <!--third-party javascript-->
   <script src="js/lib/taffy.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
   <script src="js/jq/jquery_1.9.1.js"></script>
   <script src="js/jq/jquery.uriAnchor-1.1.3.js"></script>
   <script src="js/jq/jquery.event.gevent.js"></script>
